Fix layout issue on Services and Studios pages

--- a/src/assets/styles/base/_base.scss
+++ b/src/assets/styles/base/_base.scss
@@ -11,6 +11,7 @@
   line-height: 1.5;
   font-weight: 400;
   height: 100vh;
+  width: 100vw;
 
   color-scheme: light dark;
   color: $text-color-light;
