--- a/src/assets/styles/components/entities/items/_items-list.scss
+++ b/src/assets/styles/components/entities/items/_items-list.scss
@@ -1,4 +1,5 @@
 .items-list {
   grid-template-columns: repeat(auto-fill, minmax(220px, 1fr));
   gap: 0.75rem;
+  width: 100% !important;
 }
