--- a/src/assets/styles/layout/_grid.scss
+++ b/src/assets/styles/layout/_grid.scss
@@ -2,9 +2,8 @@ main {
   display: grid;
   gap: 1rem;
   min-height: 100vh;
-  max-width: 2300px;
+  max-width: clamp(100%, 80vw, 2300px);
   padding: 0.5rem 1rem 0.5rem 1rem;
-  justify-content: center;
   grid-template-rows: max-content 1fr;
 
   .studio-details {
