--- a/src/assets/styles/layout/_header.scss
+++ b/src/assets/styles/layout/_header.scss
@@ -8,12 +8,18 @@ header {
   gap: 0.5rem;
   z-index: 1000;
   padding: 0 1rem;
-  // padding: 0.5rem 1rem;
   background: linear-gradient(135deg, $color-primary 10%, $bg-color-secondary 90%);
   text-align: center;
   border-bottom: 2px solid $text-color-light;
   place-items: center;
   box-shadow: inset 0 0 10px 5px rgba(255, 255, 255, 0.132);
+
+  @supports (-webkit-overflow-scrolling: touch) {
+    /* iOS-specific styles */
+    position: -webkit-sticky;
+    -webkit-overflow-scrolling: touch;
+  }
+
   .logo {
     padding-inline-end: 0.5rem;
   }
