--- a/src/assets/styles/layout/_hero.scss
+++ b/src/assets/styles/layout/_hero.scss
@@ -3,7 +3,7 @@
   place-items: center;
   justify-content: start;
   min-height: 8rem;
-  max-width: 600px;
+  width: 100%;
   .hero-header {
     text-wrap: nowrap;
     font-size: 1.5em;
