--- a/src/assets/styles/pages/_studios.scss
+++ b/src/assets/styles/pages/_studios.scss
@@ -1,16 +1,7 @@
 .studios-page {
   display: grid;
+  width: 100%;
   justify-items: center;
   gap: 1rem;
   margin-block-end: 2.5rem;
-
-  h1 {
-    max-width: max-content;
-    place-self: center;
-    cursor: pointer;
-    justify-self: start;
-    &:hover {
-      text-shadow: 0 0 12px #bdeeff;
-    }
-  }
 }
